Fixed spacing issues on homepage

--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,8 @@ button {
     width: 70%;
 }
 #signUp {
-    align-content: center;
+    margin-right: 5px;
+    padding-bottom: 5px;
 }
 #headerButton1 {
     background-color: #EDCB9A;
